service.yml
apiVersion: v1
kind: Service
metadata:
  name: yourapp
  labels:
    app: yourapp
spec:
  selector:
    app: yourapp
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
