ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yourapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
  - host: yourdomain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: yourapp
          servicePort: http
